Update 11.tex, 12.tex, and 4 more files...

--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -11,6 +11,11 @@ og
 \lambda \cdot cosh(\dfrac{75}{\lambda})-15 &=\lambda
 \end{align*}
 I de 2 programmer kan man finde ud af at den først omskrivning ikke vil fungere til at finde en løsning, mens den anden nærmer sig en løsning der er ca 189. Det ene program plotter visuelt hvad der sker mens den anden viser hver iteration.
+% 
+\\
+
+\colorbox{green}{Argumenter for andvendelsen i forhold til Turner}
+% 
 \lstset{style=mystyle}
 \lstinputlisting[language=Python]{code/1_4_c_1_8.py}
 geg
