--- a/CSB/incl/main/11.tex
+++ b/CSB/incl/main/11.tex
@@ -1,4 +1,4 @@
-\section*{1.}
+\section*{1. Graf for funktion}
 Kode implementeringen finde i appendix \ref{app:1.1}.
 % 
 Ændringer i $h_0$ viser sig kun at ændre på højden af kædelinjen, men påvirker ikke selve kædens form. 
