--- a/CSB/incl/main/12.tex
+++ b/CSB/incl/main/12.tex
@@ -1,11 +1,17 @@
-\section*{2.}
-%
+\section*{2. Formler}
+% Noget introducernde tekst?
+% Mangler det første ikke?
+Følgende gælder
 \begin{align}
 f(\frac{L}{2})	&= h_0 + \lambda cosh (\frac{L}{2 \lambda}) = h\\
 f(0)			&= h_0 + \lambda = h-s
 \end{align}
 %
-Disse $2$ ligninger kan give anledning til en ny ligning.
+\colorbox{green}{da, tekst?} 
+\\
+%
+
+Ligning (1.1) og (1.2) kan give anledning til en ny ligning:
 %
 \begin{align}
 h_0 + \lambda \cosh (\frac{L}{2 \lambda}) -(h_0 + \lambda \cosh (\frac{L}{2 \lambda})) &= h_0 + \lambda -(h_0 + \lambda)\\
