--- a/CSB/incl/main/14a.tex
+++ b/CSB/incl/main/14a.tex
@@ -1,4 +1,4 @@
-\subsection*{(a)}
+\subsection*{(a) Newtons metode og bisektionsmetoden}
 %
 Både Newtons metode og bisektionsmetoden er metoder til numerisk bestemmelse af nulpunkter.
 Derfor omskrives ligning (bingbong) til
@@ -10,3 +10,6 @@ Derfor omskrives ligning (bingbong) til
 hvorefter metoderne kan bruges til at bestemme et nulpunkt.
 Bisektionsmetoden når en tolerance på $1\cdot 10^{-12}$ efter $47$ iterationer.
 Med samme tolerance afsluttes Newtons metode efter kun $7$ iterationer.
+\\
+
+\colorbox{green}{Argumenter for andvendelsen af de to metoder}
