--- a/CSB/incl/main/14b.tex
+++ b/CSB/incl/main/14b.tex
@@ -1,7 +1,15 @@
 \subsection*{(b) Sekantmetoden}
 %Skriv et Python script der implementerer sekantmetoden. Det kan gøres ved at modicere scriptet beregnet til Newtons metode. Sammenlig sekantmetoden med Newtons metode.
-
-Forskellen mellem Sekantmetoden og Newtons metode er at Newtons metode bruger den afledede i et punkt, hvorimod Sekantmetoden bruger sekanten mellem to punkter. 
+%
+Forskellen mellem Sekantmetoden og Newtons metode er at Newtons metode bruger den afledede i et punkt, hvorimod Sekantmetoden bruger sekanten mellem to punkter. \\
+I sammenligning med eksemplet på en tolerance $1\cdot10^{-12}$, ses forskellen i på 2 iterationer. 
+%
+$$\begin{array}{l|c|c}
+\text{Metode} & \text{Resultat} & \text{Iterationer}\\
+\hline
+\text{Newton}		& 189.94865 & 7\\
+\text{Sekant}		& 189.94865 & 9
+\end{array}$$
 %
 \subsubsection*{Python script - Sekantmetoden}
 %
