--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -63,7 +63,7 @@ Derimod er  $\mathbf{x}= [ \text{ } 4 \text{  } 2 \text{  } 0 \text{ } ]^T $ en 
 % 
 %
 %
-I forbindelse med simplex-metoden har det vist sig at være problematisk med basale løsninger, der er degenererede, hvorfor disse vil forsøges undgået. 
+I forbindelse med simplexmetoden har det vist sig at være problematisk med basale løsninger, der er degenererede, hvorfor disse vil forsøges undgået. 
 Dette vil blive belyst i afsnit \ref{coronaaaaaaaaaaa}.
 Ved en mindre ændring $\epsilon$ i en overflødig aktiv betingelse vil en degenereret basal løsning kunne undgås. 
 På figur \ref{fig:jegerikkesyg} ses $\mathbf{a}_1 \mathbf{x} = b_1$, som er en overflødig aktiv betingelse, der medfører en degenereret basal løsning $\mathbf{x}$.
