--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -114,7 +114,7 @@ Følgende udsagn er ækvivalente:
 \item $\text{rang}(A)=n$.
 \item Søjlerne i $A$ på reduceret trappeform er standardvektoren i $\R^m$.
 \item $A\mathbf{x}=\mathbf{0}$ har kun løsningen $\mathbf{x}=\mathbf{0}$.                                                                                                                                                                                                                                                                                                                         
-\item Der er pivot-indgange i hver søjle i $A$. 
+\item Der er pivotindgange i hver søjle i $A$. 
 \end{enumerate}
 %
 \end{thm}
