--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -220,7 +220,7 @@ De følgende udsagn om en $m \times n$ matrix $A$ er ækvivalente:
 \item Matricen $A\mathbf{x}=\mathbf{b}$ har mindst én løsning for alle $b$ i $\R^m$.
 \item Rangen af $A$ er antallet af rækker $m$.
 \item Den reducerede trappeform har ingen nulrækker.
-\item Der er pivot-indgang i hver række i $A$. 
+\item Der er pivotindgang i hver række i $A$. 
 \end{enumerate}
 %
 \end{thm}
