--- a/incl/main/linear_optimeringsproblemer/dualitet.tex
+++ b/incl/main/linear_optimeringsproblemer/dualitet.tex
@@ -4,7 +4,7 @@
 % Jeg er iøvrigt bange for jeg er kommet til at skyde mig selv i foden, men umiddelbart giver det mening for mig, det snakker vi om.
 	% - Julie: Jeg tror du har styr på det xD
 %
-Et vigtigt element af teorien vedrørende lineære optimerings problemer og Simplex metodens brug, omhandler \textit{dualproblemer}.
+Et vigtigt element af teorien vedrørende lineære optimerings problemer og simplexmetodens brug, omhandler \textit{dualproblemer}.
 %
 \begin{defn}{}{dualproblemer}
 Givet maksimumsproblemet: 
