--- a/incl/main/simplex_metoden/pivoterings_lokke.tex
+++ b/incl/main/simplex_metoden/pivoterings_lokke.tex
@@ -1,11 +1,11 @@
-\section{Pivoterings-løkker}
-Ved degenererede basale løsninger er der en risiko for, at simplex-metoden blot skifter variabler ind og ud af basis, således at den sidder fast i en uendelig løkke.  
-For at garantere at simplex-metoden stopper ved en optimal værdi og ikke fortsætter med at pivotere uendeligt, kan der indføres forskellige regler for, hvilken variabel skal komme ind i løsningen.
+\section{Pivoteringsløkker}
+Ved degenererede basale løsninger er der en risiko for, at simplexmetoden blot skifter variabler ind og ud af basis, således at den sidder fast i en uendelig løkke.  
+For at garantere at simplexmetoden stopper ved en optimal værdi og ikke fortsætter med at pivotere uendeligt, kan der indføres forskellige regler for, hvilken variabel skal komme ind i løsningen.
 
 \subsection{Lexicografi}
 %ingen ide om det hedder lexicografi på dansk men skiver det indtil videre
 %
-Før den \textit{lexicografiske} metode til at vælge pivot-søjler introduceres, er det nødvendigt at definere lexicografi.
+Før den \textit{lexicografiske} metode til at vælge pivotsøjler introduceres, er det nødvendigt at definere lexicografi.
 \begin{defn}{}{}
 En vektor $\textbf{u}\in \R^n$ er \textbf{lexicografisk} større, eller mindre end en vektor $\textbf{v}\in \R^n$, hvis $\textbf{v} \neq \textbf{u}$ og den første ikke-nul indgang i $\textbf{u}-\textbf{v}$ er henholdsvis positiv eller negativ. Dette noteres
 \begin{align*}
@@ -13,7 +13,7 @@ En vektor $\textbf{u}\in \R^n$ er \textbf{lexicografisk} større, eller mindre e
 \end{align*} 
 \end{defn}
 \noindent
-Hvis det første ikke-nul element af en vektor er positiv, siges vektoren at være lexciografisk positiv. Modsat siges den at være lexciografisk negativ, hvis det første ikke-nul element af en vektor er negativt. Et eksempel på lexicografi ses i \ref{eks:lexi}.
+Hvis det første ikke-nul element af en vektor er positiv, siges vektoren at være lexicografisk positiv. Modsat siges den at være lexicografisk negativ, hvis det første ikke-nul element af en vektor er negativt. Et eksempel på lexicografi ses i \ref{eks:lexi}.
 \\
 %
 \begin{eks}\label{eks:lexi}
@@ -55,29 +55,29 @@ Det følger, at ethvert valg af pivotering via den lexicografiske metode er enty
 Dette er i strid med antagelsen om, at rækkerne er lineært uafhængige, hvilket er tilfældet.
 %
 \begin{thm}{}{}
-Antag, at simplex-metoden starter med, at alle rækker af en simplex-tabel, foruden den $0$'te række, er lexciografisk positive. Hvis den lexicografiske metode til at vælge pivotering er fulgt, så gælder der, at
+Antag, at simplexmetoden starter med, at alle rækker af en simplextabel, foruden den $0$'te række, er lexicografisk positive. Hvis den lexicografiske metode til at vælge pivotering er fulgt, så gælder der, at
 \begin{enumerate}[label=(\alph*)]
-\item Alle rækkerne foruden den nulte række forbliver lexciografiske positive gennem algoritmen.
+\item Alle rækkerne foruden den nulte række forbliver lexicografiske positive gennem algoritmen.
 \item Den $0$'te række vokser strengt lexicografisk for hver iteration.
-\item Simplex-metoden stopper efter et endeligt antal iterationer. 
+\item Simplexmetoden stopper efter et endeligt antal iterationer. 
 \end{enumerate}
 \end{thm}
 %
 \begin{proof}
 (a)
-Antag, at alle rækkerne af en simplex-tabel, udover den $0$'te række, er lexicografisk positive i begyndelsen af en iteration af simplex. 
-Antag dernæst, at $x_j$ kommer ind i løsningen, og at pivot-rækken er den $l$'te række. Så gælder der per den lexicografiske metode, at
+Antag, at alle rækkerne af en simplextabel, udover den $0$'te række, er lexicografisk positive i begyndelsen af en iteration af simplex. 
+Antag dernæst, at $x_j$ kommer ind i løsningen, og at pivotrækken er den $l$'te række. Så gælder der per den lexicografiske metode, at
 $$\dfrac{l\text{'te række}}{u_l}<^L \dfrac{i\text{'te række}}{u_i}, \text{  hvis } i\neq l \text{ og }u_i>0.$$
-For at bestemme den nye tabel divideres den $l$'te række med den positive variabel $u_l$ og forbliver dermed lexciografisk positiv.
-For rækker $i$, hvor $u_i<0$, skal der lægges et positivt multiplum af pivot-rækken til for at få den $i,j$'te indgang til at give nul. 
-Grundet begge rækkers lexciografiske positivitet er den resulterende række også lexicografisk positiv. 
+For at bestemme den nye tabel divideres den $l$'te række med den positive variabel $u_l$ og forbliver dermed lexicografisk positiv.
+For rækker $i$, hvor $u_i<0$, skal der lægges et positivt multiplum af pivotrækken til for at få den $i,j$'te indgang til at give nul. 
+Grundet begge rækkers lexicografiske positivitet er den resulterende række også lexicografisk positiv. 
 For rækker $i$, hvor $u_i>0$ og $i\neq l$, haves, at
 $$\text{(nye }i\text{'te række)}=\text{(gamle }i\text{'te række)}-\dfrac{u_i}{u_l}\text{(gamle }l\text{'te række)}.$$
 Grundet den tidligere ulighed, som opfyldes af de gamle rækker, vides det, at den nye $i$'te række også er lexicografisk positiv.\\\\
 (b)
 %
-I begyndelsen af hver iteration, er pivotværdien i den $0$'te række negativ, så der skal ligges et positiv multiplum af pivot rækken til. 
-Da pivot rækken er lexicografisk positiv, stiger den $0$'te række lexicografisk.\\\\
+I begyndelsen af hver iteration, er pivotværdien i den $0$'te række negativ, så der skal ligges et positiv multiplum af pivotrækken til. 
+Da pivotrækken er lexicografisk positiv, stiger den $0$'te række lexicografisk.\\\\
 %
 (c)
 Eftersom den $0$'te række stiger lexicografisk for hver iteration, kan den aldrig returnere til en tidligere værdi.
