--- a/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
+++ b/incl/main/simplex_metoden/undgå_pivoteringslokke.tex
@@ -1,5 +1,5 @@
 %
-\section{Konstruktion af simplex-metoden}
+\section{Konstruktion af simplexmetoden}
 \label{julieerfantalastiskogvidunderlig}
 % --------------------------------------------------------------
 %
