--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -6,11 +6,10 @@
 %   Kapitel 1: bla bla 
 %   Kapitel 2: bla bla 
 %   m.m.
-I denne rapport afdækkes lineær optimering, som også kaldes lineær programmering, med fokus på simplex-metoden.
+I denne rapport afdækkes lineær optimering, som også kaldes lineær programmering, med fokus på simplexmetoden.
 Optimeringsproblemer er en fundamental del af matematikken, og i den anvendte matematik udgør disse en vægtig del af matematikeres virke. 
-Dele af forskningsfeltet betragter George Bernard Dantzig som værende  ophavsmand til behandlingen af optimeringsproblemer, som de betragtes i dag, samt til udarbejdelsen af simplex-metoden \citep[side 107]{refa} i 1947.
+Dele af forskningsfeltet betragter George Bernard Dantzig som værende  ophavsmand til behandlingen af optimeringsproblemer, som de betragtes i dag, samt til udarbejdelsen af simplexmetoden \citep[side 107]{refa} i 1947.
 %Ved ikke helt med det "fundamental", kan ikke lige finde på noget andet til gengæld... 
-%Simplex-metoden eller simplex-metoden? 
 Der er dog til stadighed diskussion om, hvor lineære programmeringsproblemer som matematisk felt stammer fra, da andre peger på Sovjetunionen og behovet for at optimere produktionen i en planøkonomisk kontekst som ophav \citep[side 155]{refb}.
 Forudsætningen for at Dantzig arbejdede med lineære programmeringsproblemer, var hans ansættelse ved Royal Airforce \citep[side 107]{refa}, samt en applikation blev i forbindelse med den vestligt kontrollerede sektor af Berlin.
 %Hvad betyder ovenstående? :-) 
@@ -20,16 +19,16 @@ Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin, 
 Da en sådan måde at indføre varer på er ressourceintensiv, opstod derfor et behov for at gøre dette mest effektivt, underlagt de logistiske restriktioner.
 Det er derfor et matematisk felt, som i sin brug er nært bundet op på praktiske problemstillinger; dette værende økonomiske og logistiske.
 Det er ligeledes et felt, der har været nært knyttet op til militære problemstillinger, som Dantzigs ansættelsesforhold også antyder.
-Dantzigs bidrag til forskningsfeltet i form af simplex-metoden er dog stadig en fundamental del af løsning af lineære programmeringsproblemer i dag.
+Dantzigs bidrag til forskningsfeltet i form af simplexmetoden er dog stadig en fundamental del af løsning af lineære programmeringsproblemer i dag.
 \\\\
-Projektets primære arbejdsområde vil derfor omhandle simplex-metoden, samt den geometriske fremstilling af lineære programmeringsproblemer.
+Projektets primære arbejdsområde vil derfor omhandle simplexmetoden, samt den geometriske fremstilling af lineære programmeringsproblemer.
 Det skal dog nævnes, at der ligeledes findes optimeringsproblemer, som ikke kan beskrives igennem lineære sammenhænge. 
 Dog er indholdet af denne rapport afgrænset til at afdække løsning af lineære optimeringsproblemer.
 %
 Problemformuleringen, der ligger til grundlag for udarbejdelsen af rapporten, er: 
 %
 \begin{col}{}{}
-Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan disse løses ved hjælp af simplex-metoden?
+Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan disse løses ved hjælp af simplexmetoden?
 \end{col}
 % 
 \noindent
@@ -43,10 +42,9 @@ Desuden belyses nogle essentielle egenskaber ved lineære ligningssystemer.
 Endvidere introduceres i dette kapitel, hvordan lineære programmeringsproblemer fremstilles matematisk, samt nogle interessante egenskaber ved dem. 
 \item[\textbf{Kapitel 3:}] Afdækker, hvad en grafisk løsning af lineære programmeringsproblemer indebærer. 
 Geometrisk fremstilling introduceres. 
-Begreber og sætninger, der er nødvendige for simplex-metoden, forefindes ligeledes i dette kapitel. 
-\item[\textbf{Kapitel 4:}] Er en undersøgelse og anvendelse af simplex-metoden. 
-Kapitlet indeholder en beskrivelse af samt bevis for simplex-metoden som løsningsalgoritme.
-\item[\textbf{Kapitel 5:}] Dualitet? LU-dekomposition? Nej? Jo? Ja? Måske? 
+Begreber og sætninger, der er nødvendige for simplexmetoden, forefindes ligeledes i dette kapitel. 
+\item[\textbf{Kapitel 4:}] Er en undersøgelse og anvendelse af simplexmetoden. 
+Kapitlet indeholder en beskrivelse af samt bevis for simplexmetoden som løsningsalgoritme.
 \end{itemize}
 %
 Foruden ovennævnte kapitler findes $???$ bilag slutteligt i denne rapport.
