--- a/CSB/incl/main/14d.tex
+++ b/CSB/incl/main/14d.tex
@@ -11,5 +11,5 @@ $$\begin{array}{l|c|c}
 \text{Bisektion}	& 189.94865 & 46\\
 \text{Newton}		& 189.94865 & 7\\
 \text{Sekant}		& 189.94865 & 9\\
-\text{Fikspunkt}	& 189.94865 & 345
+\text{Integrations}	& 189.94865 & 345
 \end{array}$$
