--- a/CSB/incl/main/14c.tex
+++ b/CSB/incl/main/14c.tex
@@ -1,23 +1,40 @@
-\subsection*{(c) Fixpunktligningen}
- Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.\\
+\subsection*{(c) Integrationsmetoden}
+% Ligningen (6) kan omskrives til en fixpunktligning. Gør rede for de to omskrivninger her.
 Omskrivningerne kan fåes alt efter hvilket $\lambda$ der isolerers for
-\begin{align*}
-\lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
-\lambda&=\dfrac{\lambda+15}{cosh(\dfrac{75}{\lambda})}
-\end{align*}
-og
-\begin{align*}
-\lambda \cdot cosh(\dfrac{75}{\lambda})&=\lambda+15\\
-\lambda \cdot cosh(\dfrac{75}{\lambda})-15 &=\lambda
-\end{align*}
-I de 2 programmer kan man finde ud af at den først omskrivning ikke vil fungere til at finde en løsning, mens den anden nærmer sig en løsning der er ca 189. Det ene program plotter visuelt hvad der sker mens den anden viser hver iteration.
+$$
+\begin{array}{rlcrl}
+\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15 & \phantom{matematik} & \lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
+\lambda &=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})} & \text{ og } & \lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15 &=\lambda
+\end{array}
+$$ 
+%
+%\begin{align*}
+%\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
+%\lambda&=\dfrac{\lambda+15}{\text{cosh}(\dfrac{75}{\lambda})}
+%\end{align*}
+%og
+%\begin{align*}
+%\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})&=\lambda+15\\
+%\lambda \cdot \text{cosh}(\dfrac{75}{\lambda})-15 &=\lambda
+%\end{align*}
+%
+I de 2 programmer kan man finde ud af, at den første omskrivning ikke vil fungere til at finde en løsning, mens den anden nærmer sig en løsning, som er ca. 189. Det ene program plotter visuelt, hvad der sker, mens den anden viser hver iteration.
 % 
-\\
-
-\colorbox{green}{Argumenter for andvendelsen i forhold til Turner}
-% 
+%
+\subsubsection*{Python script - Plotning}
+%
 \lstset{style=mystyle}
 \lstinputlisting[language=Python]{code/1_4_c_1_8.py}
-geg
+%
+\subsubsection*{Python script - Integrationsmetoden}
+%
 \lstset{style=mystyle}
 \lstinputlisting[language=Python]{code/func-iter.py}
+%
+\phantom{matematik}\\\\
+Integrationsmetoden kan alt efter hvilken fixpunktsligning og startværdi, have forskellige resultater. 
+Den kan både være ikke-defineret, give en værdi langt fra ønsket, give en værdi tæt på, dog ikke tæt nok, osv. 
+Derfor er det vigtigt at prøve forskellige isolereinger af og kigge grafisk på situationen, som overstående. 
+Med udgangspunkt i sætning 13 i Turner findes der kun en ekstakt løsning til $g(x)=x$ i det givne interval, og det er derfor vigtigt at analysere sine resultater, da integrationsmetoden kan give flere forskellige resultater.
+\\\\
+% 
