--- a/CSB/incl/main/12.tex
+++ b/CSB/incl/main/12.tex
@@ -1,21 +1,20 @@
 \section*{2. Formler}
 % Noget introducernde tekst?
 % Mangler det første ikke?
-Følgende gælder
+Da søjlerne er placeret i $x = \pm \frac{L}{2}$ og søjlerne har højden $h$ gælder følgende
 \begin{align}
-f(\frac{L}{2})	&= h_0 + \lambda cosh (\frac{L}{2 \lambda}) = h\\
-f(0)			&= h_0 + \lambda = h-s
+f\left(\frac{L}{2}\right)	= h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) = h
+\end{align}
+Søjlerne stå således symetrisk omkring $x = 0$ og da $s$ er afstanden som kæden flader, haves følgende
+\begin{align}
+f(0) =	 h_0 + \lambda 	\cosh (0)	= h_0 + \lambda = h-s
 \end{align}
 %
-\colorbox{green}{da, tekst?} 
-\\
-%
-
 Ligning (1.1) og (1.2) kan give anledning til en ny ligning:
 %
 \begin{align}
-h_0 + \lambda \cosh (\frac{L}{2 \lambda}) -(h_0 + \lambda \cosh (\frac{L}{2 \lambda})) &= h_0 + \lambda -(h_0 + \lambda)\\
-h_0 + \lambda \cosh (\frac{L}{2 \lambda}) - h &= h_0 + \lambda - (h - s)\\
-\lambda \cosh (\frac{L}{2 \lambda}) - h &= \lambda - h + s\\
-\lambda \cosh (\frac{L}{2 \lambda}) &= \lambda + s
+h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) -\left(h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right)\right) &= h_0 + \lambda -(h_0 + \lambda)\\
+h_0 + \lambda \cosh \left(\frac{L}{2 \lambda}\right) - h &= h_0 + \lambda - (h - s)\\
+\lambda \cosh \left(\frac{L}{2 \lambda}\right) - h &= \lambda - h + s\\
+\lambda \cosh \left(\frac{L}{2 \lambda}\right) &= \lambda + s
 \end{align}
